[gd_scene load_steps=3 format=3 uid="uid://bv0usovfn47ua"]

[ext_resource type="Script" uid="uid://daykhbebvib83" path="res://Resources/UI/SaveSelectScreen.gd" id="1_tdikj"]
[ext_resource type="Texture2D" uid="uid://deks8fn1d1us2" path="res://Resources/UI/titlescreen.png" id="2_t7s4d"]

[node name="SaveSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tdikj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t7s4d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -19.5
offset_right = 4.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.340213, 0.827908, 0.247563, 1)

[node name="SlotsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
